2008-05-16  Øyvind Kolås  <pippin@o-hand.com>

	* Makefile.am:
	* clutter-box2d.pc.in:
	* clutter-box2d/Makefile.am:
	* configure.ac: target clutter trunk (0.7.x)

	* examples/actor-manipulator.c:
	* examples/scene-prismatic-joint.c:
	* examples/util.c: ported from clutter_texture_new_from_pixbuf to
	clutter_texture_new_from_file.

2008-04-17  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d.cpp: add get_property vfunc to box2d
	class.

2008-04-14  Øyvind Kolås  <pippin@o-hand.com>

	* README: improved, updated TODO.
	* doc/reference/clutter-box2d-docs.sgml: rephrased slightly.

2008-04-14  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d.cpp:
	* clutter-box2d/clutter-box2d.h: added apply_force and apply_torque
	methods.
	* doc/reference/clutter-box2d-sections.txt:
	* examples/actor-manipulator.c: (action_apply_force),
	(action_apply_torque), (actor_manipulator_press):

2008-04-14  Øyvind Kolås  <pippin@o-hand.com>

	* README: removed API documentation from list of items, since the
	preliminary documentation is in place.
	* clutter-box2d/clutter-box2d.cpp:
	* clutter-box2d/clutter-box2d.h: added get|set_linear_velocity and
	_angular_velocity methods.
	* doc/reference/clutter-box2d-sections.txt:
	* examples/actor-manipulator.c: (action_set_linear_velocity),
	(actor_manipulator_press): added a menu item for setting the linear
	velocity.

2008-04-11  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d.cpp:
	* clutter-box2d/clutter-box2d.h: expose "simulating" as a property of
	ClutterBox2D.

2008-04-11  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d.cpp:
	* clutter-box2d/clutter-box2d.h:
	* doc/reference/clutter-box2d-sections.txt: Improved coverage of
	documentation.

2008-04-11  Øyvind Kolås  <pippin@o-hand.com>

	* box2d/Makefile.am:
	* clutter-box2d/Makefile.am:
	* examples/Makefile.am: add more files to distribution making
	clutter-box2d pass distcheck.
